# csgy-9163-unit1-spell

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  main.c  test_main.c
cmake/: config.h.in
csgy-9163-unit1-spell/: main.c
csgy-9163-unit1-spell.xcodeproj/: project.pbxproj
csgy-9163-unit1-spell.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
csgy-9163-unit1-spell.xcodeproj/project.xcworkspace/xcuserdata/alexbiehl.xcuserdatad/: UserInterfaceState.xcuserstate
csgy-9163-unit1-spell.xcodeproj/xcuserdata/alexbiehl.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  dictionary.c  dictionary.h  main.c  spell.c  spell.h
tests/: CMakeLists.txt  test_main.c  test_spell.c
